--- a/DairyProject/templates/dash/s_dashboard.html
+++ b/DairyProject/templates/dash/s_dashboard.html
@@ -145,7 +145,7 @@
         <a href="$" data-url="$"><i class="fas fa-key"></i> Change Password</a>
         <a href="{% url 'prod_view' %}" data-url="{% url 'prod_view' %}"><i class="fas fa-chart-bar"></i> View Product</a>
         <a href="{% url 'product_add' %}" data-url="{% url 'product_add' %}"><i class="fas fa-chart-bar"></i> Add Product</a>
-        <a href="$" data-url="$"><i class="fas fa-chart-bar"></i> Add Cattle</a>
+        <a href="{% url 'add_cattle' %}" data-url="{% url 'add_cattle' %}"><i class="fas fa-chart-bar"></i> Add Cattle</a>
     </div>
 
     <!-- Main Content -->
