--- a/DairyProject/templates/s_register.html
+++ b/DairyProject/templates/s_register.html
@@ -197,7 +197,7 @@
                 </div>
                 <div class="form-group">
                     <label for="cattle_license"></label>
-                    <input type="text" name="cattle_license" id="cattle_license" placeholder="Cattle License" required>
+                    <input type="text" name="cattle_license" id="cattle_license" placeholder="Farmer ID" required>
                 </div>
                 
                 <div class="form-group">
