--- a/DairyProject/templates/dash/a_dashboard.html
+++ b/DairyProject/templates/dash/a_dashboard.html
@@ -127,7 +127,7 @@
                 <li><a href="{% url 'profile' %}"><i class="fas fa-home"></i> Profile</a></li>
                 <li><a href="{% url 'prod_view' %}"><i class="fas fa-chart-bar"></i> View Product</a></li>
                 <li><a href="{% url 's_view' %}"><i class="fas fa-users"></i> View Seller</a></li>
-                <li><a href="{% url 'cat_add' %}"><i class="fas fa-users"></i> View Seller</a></li>
+                <li><a href="{% url 'add_cattle' %}"><i class="fas fa-users"></i> View Seller</a></li>
                 <li><a href="{% url 'c_view' %}"><i class="fas fa-users"></i> View monthly Statistics</a></li>
                 <li><a href="{% url 'c_view' %}"><i class="fas fa-users"></i> View Availability</a></li>
                 <li><a href="{% url 'c_view' %}"><i class="fas fa-users"></i> View Orders</a></li>
