--- a/DairyProject/templates/cattle/view_cattle.html
+++ b/DairyProject/templates/cattle/view_cattle.html
@@ -69,7 +69,7 @@
             <tbody>
                 {% for cattle in cattle_data %}
                     <tr>
-                        <td>{{ cattle.cattle_license }}</td>
+                        <td>{{ cattle.farmer_license }}</td>
                         <td>{{ cattle.EarTagID }}</td>
                         <td>{{ cattle.CattleType.name }}</td>
                         <td>{{ cattle.BreedName.name }}</td>
