--- a/DairyProject/templates/s_register.html
+++ b/DairyProject/templates/s_register.html
@@ -196,8 +196,8 @@
                     <div class="error-message" id="lastnameError"></div>
                 </div>
                 <div class="form-group">
-                    <label for="cattle_license"></label>
-                    <input type="text" name="cattle_license" id="cattle_license" placeholder="Farmer ID" required>
+                    <label for="farmer_license"></label>
+                    <input type="text" name="farmer_license" id="farmer_license" placeholder="Farmer ID" required>
                 </div>
                 
                 <div class="form-group">
