--- a/DairyProject/static/css/style1.css
+++ b/DairyProject/static/css/style1.css
@@ -374,7 +374,19 @@
     padding-top: 0;
 }
 
+.product-card {
+    border: 1px solid #ddd;
+    margin: 10px;
+    padding: 10px;
+    width: 300px;
+    display: inline-block;
+    text-align: center;
+}
 
+.product-image {
+    max-width: 100%;
+    height: auto;
+}
 /*** Team ***/
 .team-item {
     position: relative;
