--- a/DairyProject/templates/gallery.html
+++ b/DairyProject/templates/gallery.html
@@ -63,39 +63,6 @@
     <!-- Topbar End -->
 
 
-    <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5">
-        <a href="index.html" class="navbar-brand d-flex align-items-center">
-            <h1 class="m-0">Milky</h1>
-        </a>
-        <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
-                <a href="product.html" class="nav-item nav-link">Products</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu bg-light m-0">
-                        <a href="gallery.html" class="dropdown-item active">Gallery</a>
-                        <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
-                    </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
-            </div>
-            <div class="border-start ps-4 d-none d-lg-block">
-                <button type="button" class="btn btn-sm p-0"><i class="fa fa-search"></i></button>
-            </div>
-        </div>
-    </nav>
-    <!-- Navbar End -->
-
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
@@ -112,75 +79,34 @@
     </div>
     <!-- Page Header End -->
 
-
-    <!-- Gallery Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto pb-4 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="section-title bg-white text-center text-primary px-3">Gallery</p>
-                <h1 class="mb-5">Explore Our Dairy Farm Gallery</h1>
-            </div>
-            <div class="row g-0">
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="row g-0">
-                        <div class="col-12">
-                            <a class="d-block" href="img/gallery-5.jpg" data-lightbox="gallery">
-                                <img class="img-fluid" src="img/gallery-5.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="col-12">
-                            <a class="d-block" href="img/gallery-1.jpg" data-lightbox="gallery">
-                                <img class="img-fluid" src="img/gallery-1.jpg" alt="">
-                            </a>
-                        </div>
+<!-- Gallery Start -->
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="text-center mx-auto pb-4 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+            <p class="section-title bg-white text-center text-primary px-3">Gallery</p>
+            <h1 class="mb-5">Explore Our Products</h1>
+        </div>
+        <div class="row g-0">
+            {% for product in products %}
+            <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="{{ forloop.counter }}">
+                <div class="row g-0">
+                    <div class="col-12">
+                        <a class="d-block" href="{{ product.image.url }}" data-lightbox="gallery">
+                            <img class="img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                        </a>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="row g-0">
-                        <div class="col-12">
-                            <a class="d-block" href="img/gallery-2.jpg" data-lightbox="gallery">
-                                <img class="img-fluid" src="img/gallery-2.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="col-12">
-                            <a class="d-block" href="img/gallery-6.jpg" data-lightbox="gallery">
-                                <img class="img-fluid" src="img/gallery-6.jpg" alt="">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="row g-0">
-                        <div class="col-12">
-                            <a class="d-block" href="img/gallery-7.jpg" data-lightbox="gallery">
-                                <img class="img-fluid" src="img/gallery-7.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="col-12">
-                            <a class="d-block" href="img/gallery-3.jpg" data-lightbox="gallery">
-                                <img class="img-fluid" src="img/gallery-3.jpg" alt="">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="row g-0">
-                        <div class="col-12">
-                            <a class="d-block" href="img/gallery-4.jpg" data-lightbox="gallery">
-                                <img class="img-fluid" src="img/gallery-4.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="col-12">
-                            <a class="d-block" href="img/gallery-8.jpg" data-lightbox="gallery">
-                                <img class="img-fluid" src="img/gallery-8.jpg" alt="">
-                            </a>
-                        </div>
+                    <div class="col-12">
+                        <h5>{{ product.name }}</h5>
+                        <p>{{ product.description }}</p>
+                        <p>Price: ${{ product.price }}</p>
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
     </div>
-    <!-- Gallery End -->
+</div>
+<!-- Gallery End -->
 
 
     <!-- Footer Start -->
