--- a/DairyProject/static/css/style1.css
+++ b/DairyProject/static/css/style1.css
@@ -345,7 +345,6 @@
     background: var(--secondary);
 }
 
-
 /*** Product ***/
 .product-item {
     position: relative;
@@ -378,15 +377,30 @@
     border: 1px solid #ddd;
     margin: 10px;
     padding: 10px;
-    width: 300px;
+    width: 400px;
     display: inline-block;
     text-align: center;
 }
 
 .product-image {
-    max-width: 100%;
-    height: auto;
+    height: 100px; /* Set the desired height */
+    width: 100%;
+    object-fit: cover;
 }
+.love-icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #fff;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.love-icon.active {
+    color: red;
+}
+
+
 /*** Team ***/
 .team-item {
     position: relative;
