--- a/DairyProject/templates/category/product_add.html
+++ b/DairyProject/templates/category/product_add.html
@@ -77,7 +77,7 @@
             <h3>{{ product.p_name }}</h3>
             <p>Price: ${{ product.price }}</p>
             <p>{{ product.description }}</p>
-            <a href="{% url 'product_detail' product.id %}" class="btn">View Details</a>
+            <a href="{% url 'product_detail' product.id %}" class="btn">Detailed view</a>
         </div>
         {% endfor %}
     </div>
