--- a/DairyProject/templates/inc/navbar.html
+++ b/DairyProject/templates/inc/navbar.html
@@ -1,7 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    
     <body>
 <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5">
             <a href="{%  url 'home' %}" class="navbar-brand d-flex align-items-center">
@@ -13,12 +12,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="{%  url 'home' %}"class="nav-item nav-link active">Home</a>
-            <a href="{% static '/about.html' %}" class="nav-item nav-link">About</a>
-            <!--a href="{% url 'login' %}" class="nav-item nav-link">Login</a-->
-
-            <a href="{% static '/service.html' %}" class="nav-item nav-link">Products</a>
-            <!--a href="{% url 'c_register' %}" class="nav-item nav-link">Registration</a-->
-
+            <a href="{% url 'about' %}" class="nav-item nav-link">About</a>
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Todays Rate</a>
                 <div class="dropdown-menu bg-light rounded-0 m-0">
@@ -29,11 +23,9 @@
                     <a  class="dropdown-item">Paneer----100/-</a>
                 </div>
             </div>
-            <!--a href="{% static '/contact.html' %}" class="nav-item nav-link">Contact</a-->
+            <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
         </div>
-        <!--div class="border-start ps-4 d-none d-lg-block">
-            <button type="button" class="btn btn-sm p-0"><i class="fa fa-search"></i></button>
-        </div-->
+        
     </div>
 </nav>
 </body>
